--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <h1>Hello Trevor!</h1>
   <button id="openFile" onclick="openFile();">Open</button>
 
-<br />
+  <br />
 
-<textarea id="editor" style="width: 400px; height: 300px;"></textarea>
+  <textarea id="editor" style="width: 400px; height: 300px;"></textarea>
 
 </body>
 
@@ -23,11 +23,30 @@
   require('./renderer.js')
 
   const {dialog} = require('electron').remote
+  var fs = require('fs');
 
-  function openFile() {    
-    dialog.showOpenDialog({ properties: ['openFile', 'openDirectory', 'multiSelections'] })
+  function openFile() {
+    dialog.showOpenDialog(function (fileNames) {
+      // fileNames is an array that contains all the selected
+      if (fileNames === undefined) {
+        console.log("No file selected");
+      } else {
+        readFile(fileNames[0]);
+      }
+    });
   }
 
+  function readFile(filepath) {
+    fs.readFile(filepath, 'utf-8', function (err, data) {
+      if (err) {
+        alert("An error ocurred reading the file :" + err.message);
+        return;
+      }
+      // Change how to handle the file content
+      console.log("The file content is : " + data);
+      document.getElementById("editor").innerHTML = data;
+    });
+  }
 
 </script>
 
