--- a/index.html
+++ b/index.html
@@ -2,58 +2,119 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Hello World!</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Bank Bank Equals Bank</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 </head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>Bank Bank Equals Bank</h1>
-        <button class="btn btn-primary" id="openFile" onclick="openFile();">Open</button>
-        <hr />
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Bank Bank Equals Bank</h1>
+
+                <button class="btn btn-primary" id="openFile" onclick="openFile();">Open QFX File</button>
+                <hr />
+                <p><strong>Ledger Balance: <span id="ledgerBalance"></span></strong></p>
+                <p><strong>Available Balance: <span id="availableBalance"></span></strong></p>
+            </div>
+        </div>
+        <div class="hide" id="transactions"> </div>
+        <table id="transaction-table" class="table table-striped table-bordered table-hover">
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Amount</th>
+              <th>Type</th>
+              <th>Name</th>
+              <th>Memo</th>
+            </tr>
+            <tbody id="transactions-body">
+
+            </tbody>
+          </thead>
+        </table>
+        <!-- <textarea class="form-control" id="editor" style="width: 400px; height: 300px;"></textarea> -->
     </div>
-
-    <textarea class="form-control" id="editor" style="width: 400px; height: 300px;"></textarea>
-  </div>
 </body>
-
+<script>
+    if (typeof module === 'object') {
+        window.module = module;
+        module = undefined;
+    }
+</script>
+<script src="moment.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
-  // You can also require other files to run in this process
-  require('./renderer.js')
+    if (window.module) module = window.module;
+</script>
+<script>
+    // You can also require other files to run in this process
+    require('./renderer.js')
 
-  const {dialog} = require('electron').remote
-  var fs = require('fs');
+    const {
+        dialog
+    } = require('electron').remote
+    var fs = require('fs');
 
-  function openFile() {
-    dialog.showOpenDialog(function (fileNames) {
-      // fileNames is an array that contains all the selected
-      if (fileNames === undefined) {
-        console.log("No file selected");
-      } else {
-        readFile(fileNames[0]);
-      }
-    });
-  }
+    function openFile() {
+        dialog.showOpenDialog(function(fileNames) {
+            // fileNames is an array that contains all the selected
+            if (fileNames === undefined) {
+                console.log("No file selected");
+            } else {
+                readFile(fileNames[0]);
+            }
+        });
+    }
 
-  function readFile(filepath) {
-    fs.readFile(filepath, 'utf-8', function (err, data) {
-      if (err) {
-        alert("An error ocurred reading the file :" + err.message);
-        return;
-      }
-      // Change how to handle the file content
-      console.log("The file content is : " + data);
+    function readFile(filepath) {
+        fs.readFile(filepath, 'utf-8', function(err, data) {
+            if (err) {
+                alert("An error ocurred reading the file :" + err.message);
+                return;
+            }
 
-      document.getElementById("editor").innerHTML = data;
-    });
-  }
+            $("#transactions").html(data);
 
+            $("#ledgerBalance").html($("LEDGERBAL").find("BALAMT")[0].childNodes[0].nodeValue);
+            $("#availableBalance").html($("AVAILBAL").find("BALAMT")[0].childNodes[0].nodeValue);
+
+            $("STMTTRN").each(function() {
+                var date = $(this).find("DTPOSTED")[0].childNodes[0].nodeValue;
+                var amount = $(this).find("TRNAMT")[0].childNodes[0].nodeValue;
+                var type = $(this).find("TRNTYPE")[0].childNodes[0].nodeValue;
+                var name = $(this).find("NAME")[0].childNodes[0].nodeValue;
+                var memo = $(this).find("MEMO")[0].childNodes[0].nodeValue;
+
+                $("#transactions-body").append("<tr><td>" + moment(date.substring(0,8)).format('ll') +   "</td><td>" +   amount +   "</td><td>" +   type +   "</td><td>" +    name +    "</td><td>" +    memo +    "</td></tr>");
+
+
+
+                console.log();
+            });
+
+
+
+
+
+            // var parser, xmlDoc;
+            //
+            // parser = new DOMParser();
+            // xmlDoc = parser.parseFromString(data, "text/xml");
+            //
+            // console.log(xmlDoc.getElementsByTagName("STMTTRN"));
+
+
+
+
+
+
+
+        });
+    }
 </script>
 
 
